<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Profile.ProfileActivity">

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nametxt"
                style="@style/ProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/the_girl_next_door"
                android:gravity="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    tools:srcCompat="@tools:sample/avatars[11]" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:layout_marginTop="42dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="149dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/birthDateLabel"
                                style="@style/labelStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/birth_date" />

                            <TextView
                                android:id="@+id/birthPlaceLabel"
                                style="@style/labelStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:text="@string/birth_place" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="194dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/birthDatetxt"
                                style="@style/dataStyle"
                                android:layout_width="109dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="6dp"
                                android:text="prueba" />

                            <TextView
                                android:id="@+id/citytxt"
                                style="@style/dataStyle"
                                android:layout_width="109dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="6dp"
                                android:layout_marginTop="7dp"
                                android:text="prueba" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/hobbyLabel"
                                style="@style/labelStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/hobby" />

                            <TextView
                                android:id="@+id/colorLabel"
                                style="@style/labelStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="26dp"
                                android:text="@string/color" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/hobbytxt"
                                style="@style/dataStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="prueba" />

                            <TextView
                                android:id="@+id/colortxt"
                                style="@style/dataStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="prueba" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>